<!--
/*
 * Galleon Copyright (C) 2016 Fatih.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<resources>
  <string name="app_name">Galleon</string>
  <!-- defined str -->
  <string name="titleLoginActivityView">Sign in</string>
  <string name="titleUserName">Username</string>
  <string name="strErrorUserName">Username must be e-mail format.</string>
  <string name="titlePassword">Password</string>
  <string name="strErrorPassword">Password must be at least 8 chars.</string>
  <string name="titleRememberMe">Remember Me</string>
  <string name="strErrorUsernameOrPasswordInvalid">Either UserName or Password is invalid, try later!</string>
  <string name="titleLoginButton">Login</string>
  <string name="titleActionPickGallery">Pick from gallery</string>
  <string name="titleActionTakePhoto">Take photo</string>
  <string name="titleLoading">Loading</string>
  <string name="titleImagePickerActivity">Pick Gallery Images</string>
  <string name="titleActionClear">Clear All</string>
  <string name="titleActionDone">Done</string>
  <string name="titleActionSelectedItems">%d selected.</string>
  <string name="titleDeleteEntity" formatted="false">Press %s if you want to recover %s.</string>

  <!-- navigation titles -->
  <string name="titleNavigationFindCustomers">Find Customers</string>
  <string name="titleNavigationTools">Tools</string>
  <string name="titleNavigationSettings">Settings</string>

  <!-- messages -->
  <string name="messageApproveDeleteDocumentStr" formatted="false">Are you sure you want to delete %s ?</string>
  <string name="messageDocumentDeletedSuccessfully" formatted="false">Document %s, is deleted successfully.</string>

  <!-- titles for dialogs -->
  <string name="titleChooseApplication">Select an application for opening content.</string>
  <string name="titleReadImagesPermission">Read Images Permission</string>
  <string name="titleReadImagesPermissionMessage">This application requires you allow it to read your images for processing them into pdf files.</string>
  <string name="titleMakeCallPermission">Make Call Permission</string>
  <string name="titleMakeCallPermissionMessage">This application requires you allow it to make calls on your selected customer.</string>

  <string name="titleCanMakeCall">You can simply call user with clicking on phone icon.</string>
  <string name="titleShouldCallDialogMessage" formatted="false">Are you sure you want to call %s ?</string>

  <!-- preferences -->
  <string name="titleStrAutoSync">Auto Sync</string>
  <string name="descriptionStrAutoSync">Starts sync when a file modification occur in the preferred directory.</string>
  <string name="titleStrRememberMe">Remember Me</string>
  <string name="descriptionStrRememberMe">Stores last successful login for future usage.</string>
  <string name="titleStrAutoSyncDirectory">Auto Sync Directory</string>
  <string name="descriptionStrAutoSyncDirectory">Directory where your cloud files will sync and remain in.</string>
  <string name="titleStrToolsDirectory">Tools Directory</string>
  <string name="descriptionStrToolsDirectory">Directory where your tooling results on files will we stored and you can add those cloud accounts easily.</string>
</resources>
