<?xml version="1.0" encoding="utf-8"?>
<!--
 * Galleon Copyright (C) 2016 Fatih.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

  <android.support.v7.preference.SwitchPreferenceCompat
      android:title="@string/titleStrAutoSync"
      android:summary="@string/descriptionStrAutoSync"
      android:defaultValue="false"
      android:key="autoSync" />

  <android.support.v7.preference.SwitchPreferenceCompat
      android:title="@string/titleStrRememberMe"
      android:summary="@string/descriptionStrRememberMe"
      android:defaultValue="false"
      android:key="rememberMe" />

  <android.support.v7.preference.EditTextPreference
      android:title="@string/titleStrAutoSyncDirectory"
      android:summary="@string/descriptionStrAutoSyncDirectory"
      android:inputType="text"
      android:singleLine="true"
      android:defaultValue="/sync"
      android:imeOptions="actionDone"
      android:key="syncFolder" />

  <android.support.v7.preference.EditTextPreference
      android:title="@string/titleStrToolsDirectory"
      android:summary="@string/descriptionStrToolsDirectory"
      android:inputType="text"
      android:singleLine="true"
      android:defaultValue="/tools"
      android:imeOptions="actionDone"
      android:key="toolsFolder" />


</android.support.v7.preference.PreferenceScreen>