<?xml version="1.0" encoding="utf-8"?>
<!--
 * Galleon Copyright (C) 2016 Fatih.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
    android:checkableBehavior="single">

    <item
      android:id="@+id/viewNavigationFindCustomers"
      android:icon="@drawable/ic_find"
      android:title="@string/titleNavigationFindCustomers" />

    <item
      android:id="@+id/viewNavigationTools"
      android:icon="@drawable/ic_tools"
      android:title="@string/titleNavigationTools" />

    <item
      android:id="@+id/viewNavigationSettings"
      android:icon="@drawable/ic_settings"
      android:title="@string/titleNavigationSettings" />

  </group>
</menu>